--- a/src/html/partials/components/features.pug
+++ b/src/html/partials/components/features.pug
@@ -1,7 +1,7 @@
 include ../abstracts/bemto/bemto.pug
 
 //Features
-+b.SECTION.features
++b.SECTION.features(itemscope itemtype="http://schema.org/Service")
   .container
     +e.H2.title
       +e.title-wrapper Что мы
@@ -14,7 +14,7 @@ include ../abstracts/bemto/bemto.pug
               +e.box
               i.fa.fa-battery-full
             .col-xs-10
-              +e.H3.sub-title Предложение 1
+              +e.H3.sub-title(itemprop="offers") Предложение 1
               +e.P.text Текст для предложения 1. Мы предлагаем самое качественное и лучшее.
       .col-xs-12.col-md-6.col-lg-4
         +e.item
@@ -23,7 +23,7 @@ include ../abstracts/bemto/bemto.pug
               +e.box
               i.fa.fa-truck
             .col-xs-10
-              +e.H3.sub-title Предложение 2
+              +e.H3.sub-title(itemprop="offers") Предложение 2
               +e.P.text Текст для предложения 2. Мы предлагаем самое качественное и лучшее.
       .col-xs-12.col-md-6.col-lg-4
         +e.item
@@ -32,7 +32,7 @@ include ../abstracts/bemto/bemto.pug
               +e.box
               i.fa.fa-cube
             .col-xs-10
-              +e.H3.sub-title Предложение 3
+              +e.H3.sub-title(itemprop="offers") Предложение 3
               +e.P.text Текст для предложения 3. Мы предлагаем самое качественное и лучшее.
       .col-xs-12.col-md-6.col-lg-4
         +e.item
@@ -41,7 +41,7 @@ include ../abstracts/bemto/bemto.pug
               +e.box
               i.fa.fa-mail-forward
             .col-xs-10
-              +e.H3.sub-title Предложение 4
+              +e.H3.sub-title(itemprop="offers") Предложение 4
               +e.P.text Текст для предложения 4. Мы предлагаем самое качественное и лучшее.
       .col-xs-12.col-md-6.col-lg-4
         +e.item
@@ -50,7 +50,7 @@ include ../abstracts/bemto/bemto.pug
               +e.box
               i.fa.fa-plane
             .col-xs-10
-              +e.H3.sub-title Предложение 5
+              +e.H3.sub-title(itemprop="offers") Предложение 5
               +e.P.text Текст для предложения 5. Мы предлагаем самое качественное и лучшее.
       .col-xs-12.col-md-6.col-lg-4
         +e.item
@@ -59,5 +59,5 @@ include ../abstracts/bemto/bemto.pug
               +e.box
               i.fa.fa-globe
             .col-xs-10
-              +e.H3.sub-title Предложение 6
+              +e.H3.sub-title(itemprop="offers") Предложение 6
               +e.P.text Текст для предложения 6. Мы предлагаем самое качественное и лучшее.
