--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -5,8 +5,8 @@ include ../abstracts/bemto/bemto.pug
   .container
     .row
       +e.logo
-        a(href="index.html")
-          img(src="img/logo.png")
+        a(href="index.html" itemscope itemtype="http://schema.org/Brand")
+          img(src="img/logo.png" alt="logo" title="logo" itemprop="logo")
       +e.menu
         +e.hamburger
           +b.A.hamburger(href="#")
